test/Transforms/ComputeConstrainToProduct/missing_root.llzk
// RUN: llzk-opt --llzk-compute-constrain-to-product="root-struct=Missing" -verify-diagnostics %s

// expected-error@+1 {{could not find root struct "Missing"}}
module attributes {llzk.lang} {}
